--- a/paper/references.bib
+++ b/paper/references.bib
@@ -99,8 +99,8 @@
   author = {Luca Scrucca and Chris Fraley and T. Brendan Murphy and Adrian E. Raftery},
   publisher = {Chapman and Hall/CRC},
   isbn = {978-1032234953},
-  year = {2023},
-  url = {https://mclust-org.github.io/book/},
+  year = {2023}
+  %url = {https://mclust-org.github.io/book/},
 }
 
 @article{raftery2006variable,
@@ -225,4 +225,26 @@
   author = {Gormley,  Isobel Claire and Murphy,  Thomas Brendan and Raftery,  Adrian E.},
   year = {2023},
   pages = {573--595}
+}
+
+@article{dempster1977maximum,
+  title = {Maximum Likelihood from Incomplete Data Via the EM Algorithm},
+  volume = {39},
+  number = {1},
+  journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  publisher = {Oxford University Press (OUP)},
+  author = {Dempster,  A. P. and Laird,  N. M. and Rubin,  D. B.},
+  year = {1977},
+  pages = {1--22}
+}
+
+@article{schwarz1978estimating,
+  title = {Estimating the Dimension of a Model},
+  volume = {6},
+  number = {2},
+  journal = {The Annals of Statistics},
+  publisher = {Institute of Mathematical Statistics},
+  author = {Schwarz,  Gideon},
+  year = {1978},
+  pages = {461--464}
 }
